--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 dash==2.4.1
 dash-core-components==2.0.0
-dash_bootstrap_components
+dash_bootstrap_components==0.13.1
 dash-html.components==2.0.0
 dash-table==5.0.0
 Flask==2.1.2
